--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       New great products! | Since 1990.
     </p>
     <h3><strong>New Sale! </strong>Gold Necklace</h2>
-    <p>
+    <p class="desc">
       Great product! 100% authentic gold necklace <br>
       Price: <s>5,000</s> 200 | 90% off! <br>
       Store: fake store shop <br>
