--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Great product! 100% authentic gold necklace <br>
       Price: <s>5,000</s> 200 | 90% off! <br>
       Store: fake store shop <br>
-      Rating: 5.0/5.0 | Recommended
+      Rating: 5.0/5.0 | Recommended <br>
     </p>
   </body>
 </html>
