--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Scam website</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h2>Shopping website.com</h2>
@@ -16,5 +17,6 @@
       Store: fake store shop <br>
       Rating: 5.0/5.0 | Recommended <br>
     </p>
+    <script src="script.js"></script
   </body>
 </html>
