--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h2>Shopping website.com</h2>
-    <p>
+    <h2 class="headTitle">Shopping website.com</h2>
+    <p class="headSubtitle">
       New great products! | Since 1990.
     </p>
-    <h3><strong>New Sale! </strong>Gold Necklace</h2>
+    <h3 class="title"><strong>New Sale! </strong>Gold Necklace</h2>
     <p class="desc">
       Great product! 100% authentic gold necklace <br>
       Price: <s>5,000</s> 200 | 90% off! <br>
       Store: fake store shop <br>
       Rating: 5.0/5.0 | Recommended <br>
     </p>
-    <script src="script.js"></script
+    <script src="script.js"></script>
   </body>
 </html>
