--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       New great products! | Since 1990.
     </p>
     <h3 class="title"><strong>New Sale! </strong>Gold Necklace</h2>
+    <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQ8J1WgIXpPa_7TghK6sJNXi3hNLSTi0AlbApqTkeJS9VWUU3c&usqp=CAc" />
     <hr>
     <p class="desc">
       Great product! 100% authentic gold necklace <br>
