--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
        Store: fake store shop <br>
        Rating: 5.0/5.0 | Recommended <br>
       </p>
+      <details>
+        <summary>
+          <h4>Order Now!</h4>
+        </summary>
+        <input type="text" placeholder="Email account" id="emailAcc"> <br>
+        <input type="text" placeholder="Home Address" id="homeAddr"> <br>
+        <input type="password" placeholder="Credit Card Number" id="credCardNum"> <br>
+        <input type="checkbox" id="prod1"> I'm not a robot <br>
+        <button onclick="orderButton()">Order</button>
+      </details>
       
       <br>
       <br>
@@ -34,6 +44,16 @@
         Store: Real Estate fake brokers <br>
         Rating: 5.0/5.0 | Recommended <br>
       </p>
+      <details>
+        <summary>
+          <h4>Order Now!</h4>
+        </summary>
+        <input type="text" placeholder="Email account" id="emailAcc"> <br>
+        <input type="text" placeholder="Home Address" id="homeAddr"> <br>
+        <input type="password" placeholder="Credit Card Number" id="credCardNum"> <br>
+        <input type="checkbox" id="prod1"> I'm not a robot <br>
+        <button onclick="orderButton()">Order</button>
+      </details>
       
     </div>
     <script src="script.js"></script>
