--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        Store: fake store shop <br>
        Rating: 5.0/5.0 | Recommended <br>
       </p>
-      <details>
+      <details class="productDetails">
         <summary>
           <h4>Order Now!</h4>
         </summary>
@@ -44,7 +44,7 @@
         Store: Real Estate fake brokers <br>
         Rating: 5.0/5.0 | Recommended <br>
       </p>
-      <details>
+      <details class="productDetails">
         <summary>
           <h4>Order Now!</h4>
         </summary>
