--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <input type="text" placeholder="Email account" id="emailAcc"> <br>
         <input type="text" placeholder="Home Address" id="homeAddr"> <br>
         <input type="password" placeholder="Credit Card Number" id="credCardNum"> <br>
-        <input type="checkbox" id="prod1"> I'm not a robot <br>
-        <button onclick="orderButton()">Order</button>
+        <input type="checkbox" id="captcha"> reCAPTCHA: I'm not a robot <br>
+        <button onclick="orderButton(1)">Order</button>
       </details>
       
       <br>
@@ -51,8 +51,8 @@
         <input type="text" placeholder="Email account" id="emailAcc"> <br>
         <input type="text" placeholder="Home Address" id="homeAddr"> <br>
         <input type="password" placeholder="Credit Card Number" id="credCardNum"> <br>
-        <input type="checkbox" id="prod2"> I'm not a robot <br>
-        <button onclick="orderButton()">Order</button>
+        <input type="checkbox" id="captcha"> reCAPTCHA: I'm not a robot <br>
+        <button onclick="orderButton(2)">Order</button>
       </details>
       
     </div>
