--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
        Rating: 5.0/5.0 | Recommended <br>
       </p>
       <details class="productDetails">
-        <summary>
-          <h4>Order Now!</h4>
-        </summary>
+        <summary> <h4>Order Now!</h4> </summary>
         <input type="text" placeholder="Email account" id="emailAcc"> <br>
         <input type="text" placeholder="Home Address" id="homeAddr"> <br>
         <input type="password" placeholder="Credit Card Number" id="credCardNum"> <br>
@@ -45,9 +43,7 @@
         Rating: 5.0/5.0 | Recommended <br>
       </p>
       <details class="productDetails">
-        <summary>
-          <h4>Order Now!</h4>
-        </summary>
+        <summary> <h4>Order Now!</h4> </summary>
         <input type="text" placeholder="Email account" id="emailAcc"> <br>
         <input type="text" placeholder="Home Address" id="homeAddr"> <br>
         <input type="password" placeholder="Credit Card Number" id="credCardNum"> <br>
