--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <p class="desc">
         House Mansion 100% Legit <br>
         Good experience Best house mansion <br>
-        Price: <s>450,000</s> 2,250 99.50% off! <br>
+        Price: <s>450,000</s> 2,250 | 99.50% off! <br>
         Store: Real Estate fake brokers <br>
         Rating: 5.0/5.0 | Recommended <br>
       </p>
@@ -49,6 +49,28 @@
         <input type="password" placeholder="Credit Card Number" id="credCardNum"> <br>
         <input type="checkbox" id="captcha"> reCAPTCHA: I'm not a robot <br>
         <button onclick="orderButton(2)">Order</button>
+      </details>
+
+      <br>
+      <br>
+
+      <h3 class="title">90% Sale! PS5</h3>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS93IdVK2txgI2Q1P6D44acoI4v-6GP4fXfIA&usqp=CAU" />
+      <hr>
+      <p class="desc">
+        H 100% Legit <br>
+        Good experience Best house mansion <br>
+        Price: <s>6,500</s> 850 | 99% off! <br>
+        Store: Sony Fake Entertainment <br>
+        Rating: 4.5/5.0 | Recommended <br>
+      </p>
+      <details class="productDetails">
+        <summary> <h4>Order Now!</h4> </summary>
+        <input type="text" placeholder="Email account" id="emailAcc"> <br>
+        <input type="text" placeholder="Home Address" id="homeAddr"> <br>
+        <input type="password" placeholder="Credit Card Number" id="credCardNum"> <br>
+        <input type="checkbox" id="captcha"> reCAPTCHA: I'm not a robot <br>
+        <button onclick="orderButton(3)">Order</button>
       </details>
       
     </div>
