--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS93IdVK2txgI2Q1P6D44acoI4v-6GP4fXfIA&usqp=CAU" />
       <hr>
       <p class="desc">
-        H 100% Legit <br>
-        Good experience Best house mansion <br>
+        PS5 100% Legit <br>
+        Good experience Best console <br>
         Price: <s>6,500</s> 850 | 99% off! <br>
         Store: Sony Fake Entertainment <br>
         Rating: 4.5/5.0 | Recommended <br>
