--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h2 class="headTitle">Shopping website.com</h2>
+    <img src="https://i.imgur.io/ufJ2hrk_d.webp?maxwidth=640&shape=thumb&fidelity=medium" height=100 width=100/>
     <p class="headSubtitle">
       New great products! | Since 1990.
     </p>
